# CLionOpencvShareLib

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cc/: cv_operation.cc
cvlib/: cv_operation.cc
py/model/: number.py  yolo_tiny.py
py/resize_img/: resize_.py
py/test/: test_BN.py
py/test/log/: events.out.tfevents.1553275643.dell
py/utils/: image_data_prepare.py  nn_utils.py  number_data_prepare.py
pycv/loadlib/: testOne.py
pycv/resize_img/: resize_.py
