cmake_minimum_required(VERSION 3.13)
project(CLionOpencv)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/lib")
set(OpenCV_DIR "C:\\ProgramFiles\\opencv\\mingw_build")
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
#add_executable(CLionOpencv main.cpp cc/cv_operation.cc)
add_library(CLionOpencv SHARED cc/cv_operation.cc)
target_link_libraries(CLionOpencv ${OpenCV_LIBS})