cmake_minimum_required(VERSION 3.10)
project(CLionOpencvShareLib)

set(CMAKE_CXX_STANDARD 14)
#set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/lib_linux")
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib_linux)
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
add_executable(CLionOpencvShareLib main.cpp cc/cv_operation.cc)
#add_library(CLionOpencvShareLib SHARED cc/cv_operation.cc)
target_link_libraries(CLionOpencvShareLib ${OpenCV_LIBS})